# cpp-advanced

./: .gitignore  .gitmodules  CMakeLists.txt
exercises/: CMakeLists.txt
exercises/week01/: CMakeLists.txt
exercises/week01/include/: distance.h  speed.h
exercises/week01/src/: dim.cpp  rational_test.cpp  spd.cpp
exercises/week02/: CMakeLists.txt
exercises/week02/include/: tracer.h
exercises/week02/src/: vector_tracer.cpp
exercises/week03/: .ycm_extra_conf.py  CMakeLists.txt  foo.cpp
exercises/week03/include/: BoundedBuffer.h  bounded_buffer_content_suite.h  bounded_buffer_semantic_suite.h  bounded_buffer_signatures_suite.h  bounded_buffer_student_suite.h
exercises/week03/src/: bounded_buffer_content_suite.cpp  bounded_buffer_default_behavior_suite.cpp  bounded_buffer_semantic_suite.cpp  bounded_buffer_signatures_suite.cpp  bounded_buffer_student_suite.cpp
exercises/week03/test/: BoundedBuffer_test.cpp  CMakeLists.txt
exercises/week05/: .ycm_extra_conf.py  CMakeLists.txt
exercises/week05/include/: BoundedBuffer.h  bounded_buffer_default_behavior_suite.h  bounded_buffer_heap_memory_suite.h  bounded_buffer_iterator_suite.h  bounded_buffer_non_default_constructible_element_type_suite.h  not_on_heap.h  times_literal.hpp
exercises/week05/src/: bounded_buffer_content_suite.cpp  bounded_buffer_default_behavior_suite.cpp  bounded_buffer_heap_memory_suite.cpp  bounded_buffer_iterator_suite.cpp  bounded_buffer_non_default_constructible_element_type_suite.cpp  bounded_buffer_semantic_suite.cpp  bounded_buffer_signatures_suite.cpp  bounded_buffer_student_suite.cpp
exercises/week05/test/: CMakeLists.txt  DynamicBoundedBuffer_test.cpp  not_on_heap_test.cpp
exercises/week10/: .ycm_extra_conf.py  BoundedQueue_test.xml  CMakeLists.txt
exercises/week10/include/: BoundedQueue.h  bounded_queue_content_suite.h  bounded_queue_default_behavior_suite.h  bounded_queue_heap_memory_suite.h  (+7 more)
(+13 files in other folders)
